update bg image and video poster to use webp
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/css/lude-form.css
+++ b/css/lude-form.css
@@ -6,7 +6,7 @@
 }
 
 #multistepform-bg {
-  background-image: url('/img/lude-bg-small.jpg');
+  background-image: url('/img/lude-bg-small.webp');
   background-repeat: repeat-y;
 }
 
